backend, frontend done

--- a/themes/my/css/style.css
+++ b/themes/my/css/style.css
@@ -4,3 +4,5 @@ a:hover { transition: 600ms; }
 .box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
 .border-top { border-top: 1px solid #e5e5e5; }
 .border-bottom { border-bottom: 1px solid #e5e5e5; }
+
+.nav-user-logged-in { line-height: 100%; border: 1px solid #aaa; padding: 5px; border-radius: 5px; }
